# OOP_3

./: CMakeLists.txt  README.md  ier.hpp  main.cpp  person.hpp
